--- a/src/components/UI/Services/services.scss
+++ b/src/components/UI/Services/services.scss
@@ -18,6 +18,8 @@
   }
 
   .services_subtitle {
+    width: 30%;
+    margin: auto;
     font-size: 1rem;
     margin-bottom: 2rem;
     color: #666;
