--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Open Sans"  "Inter" !important;
+  font-family: "Inter" !important;
 }
 
 .routes {
