--- a/src/components/UI/Intro/intro.scss
+++ b/src/components/UI/Intro/intro.scss
@@ -1,7 +1,7 @@
 .intro {
   width: 100%;
-  background: #009688;
-  min-height: 70vh;
+  background-color: #009688;
+  min-height: 500px;
   &_wrapper {
     max-width: 1250px;
     margin: auto;
@@ -25,7 +25,7 @@
 
     width: 421px;
     height: 41px;
-    background: #ffffff;
+    background-color: #ffffff;
     border-radius: 10px;
     border: none;
 
@@ -75,7 +75,7 @@
     width: 244px;
     height: 59px;
 
-    background: #fd661f;
+    background-color: #fd661f;
     border-radius: 10px;
     border: none;
 
