--- a/src/components/UI/Say/say.scss
+++ b/src/components/UI/Say/say.scss
@@ -23,6 +23,7 @@
       5px 6px 17px rgba(135, 135, 135, 0.11);
     border-radius: 10px;
 
+    margin-bottom: 30px;
     &_text {
       font-style: normal;
       font-weight: 400;
