--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,12 @@
   min-height: 60vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
+button {
+  cursor: pointer !important;
+}
 a {
   text-decoration: none;
 }
