--- a/src/components/UI/Client/client.scss
+++ b/src/components/UI/Client/client.scss
@@ -1,6 +1,9 @@
 .partners {
+  width: 100%;
   margin: 70px 0;
   &__container {
+    max-width: 1250px;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
