--- a/src/Styles/login.scss
+++ b/src/Styles/login.scss
@@ -1,4 +1,5 @@
 .login {
+  margin-top: 10px;
   width: 100%;
   margin-bottom: 100px;
   &_wrapper {
@@ -24,6 +25,18 @@
     z-index: 30 !important;
   }
 
+  .select_country {
+    box-sizing: border-box;
+    width: 454px;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #8f8f8f;
+  }
   &_left {
     font-family: "Inter" !important;
 
