--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   min-height: 50vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 button {
