--- a/src/components/UI/InternationalPrograms/Internationalprograms.scss
+++ b/src/components/UI/InternationalPrograms/Internationalprograms.scss
@@ -95,7 +95,7 @@
 }
 
 .accordion-header {
-  background-color: #f0f0f0;
+  background-color: #fff !important;
   border: none;
   cursor: pointer;
   padding: 0.5rem 1rem;
@@ -103,6 +103,20 @@
   text-align: left;
   width: 100%;
   transition: background-color 0.3s;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  span {
+    display: inline-block;
+    transition: transform 0.3s ease;
+    transform: rotate(0deg); // Initially pointing right
+  }
+
+  &.open span {
+    transform: rotate(90deg); // Pointing down when open
+  }
 }
 
 .accordion-header:hover {
@@ -122,7 +136,6 @@
 }
 
 .pro-services {
-  padding: 2rem;
   text-align: center;
 }
 
@@ -142,8 +155,12 @@
 
 .pro-services__grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 1.5rem;
+  grid-template-columns: 1fr auto 1fr; /* Adds "space" columns on the sides */
+  gap: 3rem;
+
+  /* Align the first and last items to the edges */
+  justify-items: stretch; /* Stretch content across available space */
+  align-items: start; /* Optional: vertically align items */
 }
 
 .pro-services__card {
@@ -168,7 +185,7 @@
 }
 
 .pro-services__card-content {
-    margin-top: 30px;
+  margin-top: 30px;
   padding: 1rem;
   text-align: left;
 }
